--- a/base/nginx-cicd.yaml
+++ b/base/nginx-cicd.yaml
@@ -18,3 +18,16 @@ spec:
       containers:
       - name : nginx
         image: seongdong/nginx-test:0.5
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: svc-cicd
+  namespace: test
+spec:
+  selector:
+    app: nginx-cicd
+  ports:
+  - protocol: TCP
+    port: 80
+#  type: NodePort
