--- a/base/ing-nginx-cicd.yaml
+++ b/base/ing-nginx-cicd.yaml
@@ -15,6 +15,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: svc-nginx-cicd
+            name: svc-cicd
             port:
               number: 80
