--- a/base/nginx-cicd.yaml
+++ b/base/nginx-cicd.yaml
@@ -1,33 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-dp-cicd
+  name: cicd-nginx-dp
   namespace: test
   labels:
-    app: nginx-cicd
+    app: cicd-nginx
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx-cicd
+      app: cicd-nginx
   template:
     metadata:
       labels:
-        app: nginx-cicd
+        app: cicd-nginx
     spec:
       containers:
       - name : nginx
         image: seongdong/nginx-test:0.5
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: svc-cicd
-  namespace: test
-spec:
-  selector:
-    app: nginx-cicd
-  ports:
-  - protocol: TCP
-    port: 80
-#  type: NodePort
